k8s/base/polyorb/soap-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soap-gateway
  namespace: polyorb
  labels:
    app: soap-gateway
    version: v1.0.0
spec:
  type: ClusterIP
  selector:
    app: soap-gateway
    version: v1.0.0
  ports:
  - name: http
    port: 8081
    targetPort: 8081
    protocol: TCP
